# lib/api-spec/openapi.yaml
@@ -346,6 +346,8 @@ components:
           type: integer
         teamMembers:
           type: ["string", "null"]
+        paymentReceiptPath:
+          type: ["string", "null"]
         createdAt:
           type: string
 
@@ -373,6 +375,8 @@ components:
           minimum: 1
           maximum: 4
         teamMembers:
+          type: string
+        paymentReceiptPath:
           type: string
 
     AdminCredentials:
